# Project-Quantum-Go

./: INTRODUCTION.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/sgf partidas/: 33yp-gokifu-20200411-Xie_Erhao-Li_Xuanhao.sgf  33z5-gokifu-20200417-Dang_Yifei-Li_Xuanhao.sgf  349j-gokifu-20200420-Liao_Yuanhe-Fan_Yunruo.sgf  36zb-gokifu-20200601-Ichiriki_Ryo-Park_Jungwhan.sgf  36zd-gokifu-20200601-Shin_Minjun-Wang_Yuanjun.sgf  36ze-gokifu-20200601-Hsu_Chiayuan-Kang_Dongyun.sgf  373y-gokifu-20200603-Park_Seunghwa-Ding_Hao.sgf  373z-gokifu-20200603-Fan_Yunruo-Shin_Jinseo.sgf  3741-gokifu-20200602-Hong_Kipyo-Li_Xuanhao.sgf  375u-gokifu-20200402-Wang_Shuang-Yu_Zhiying.sgf  37ev-gokifu-20200603-Park_Seunghwa-Ding_Hao.sgf  37ff-gokifu-20200601-Hsu_Chiayuan-Kang_Dongyun.sgf  37ua-gokifu-20200729-Iyama_Yuuta-Shin_Minjun.sgf  37ud-gokifu-20200729-Shibano_Toramaru-Lian_Xiao.sgf  37v3-gokifu-20200731-Park_Jungwhan-Lian_Xiao.sgf  383u-gokifu-20200908-Hsu_Chiayuan-Dang_Yifei.sgf  3841-gokifu-20200908-Shibano_Toramaru-Yang_Dingxin.sgf  385n-gokifu-20200615-Li_Xuanhao-Mi_Yuting.sgf  385p-gokifu-20200416-Iyama_Yuuta-Shibano_Toramaru.sgf  38ap-gokifu-20200831-Li_Qincheng-Yang_Kaiwen.sgf  38ar-gokifu-20200319-Xu_Jiayang-Li_Weiqing.sgf  (+425 more)
docs/: analisis_interactivo_partidas_go.md  arquitecturas_cuanticas.md
notebooks/: Análisis Interactivo de Partidas de Go.md  Hamiltonian_and_Ising_models.ipynb
src/: __init__.py  board_utils.py  go_energy_viz.py  go_export_utils.py  go_game_engine.py  go_isings_models.py  go_visualization.py  sgf_utils.py
