[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proyect-quantum-go"
version = "0.1.0"
description = "Ising models for Go with quantum/classical kernels and Bokeh viz"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Project Authors" }]

# Keep dependencies minimal; install extras as needed in your env
dependencies = []

[tool.setuptools]
packages = ["src"]

